force-app/main/default/objects/Events__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location_Address_Book__c</referenceTo>
    <relationshipLabel>Eventss</relationshipLabel>
    <relationshipName>Eventss</relationshipName>
    <type>Lookup</type>
</CustomField>