force-app/main/default/objects/Events__c/fields/Organizer__c.field-meta.xml
<CustomField>
    <fullName>Organizer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organizer</label>
    <referenceTo>Event_Organizer__c</referenceTo>
    <relationshipLabel>Eventss</relationshipLabel>
    <relationshipName>Eventss</relationshipName>
    <type>Lookup</type>
</CustomField>