force-app/main/default/objects/Events__c/validationRules/Event_Type_field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Type_field_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Event_Type__c , &apos;Virtual&apos;) &amp;&amp; !ISBLANK(Location__c)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>No Selection of location if event is virtual</errorMessage>
</ValidationRule>