force-app/main/default/objects/Events__c/validationRules/InPerson_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>InPerson_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Event_Type__c , &apos;In-Person&apos;) &amp;&amp; ISBLANK(Location__c)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>Location must be selected in In-Person Event</errorMessage>
</ValidationRule>