force-app/main/default/objects/Events__c/validationRules/Recurring_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Recurring__c &amp;&amp;  ISPICKVAL( Frequency__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>If Recurring is selected then its compulsory to enter Frequency</errorMessage>
</ValidationRule>