force-app/main/default/objects/Events__c/validationRules/Recurring_Validation2.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Validation2</fullName>
    <active>true</active>
    <errorConditionFormula>!Recurring__c &amp;&amp;  !ISPICKVAL( Frequency__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>You cannot select Frequency if Recurring is Unchecked</errorMessage>
</ValidationRule>