force-app/main/default/objects/Events__c/validationRules/Start_End_Time_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_End_Time_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(End__c) &amp;&amp;  End__c &lt;  Start__c + 1</errorConditionFormula>
    <errorDisplayField>End__c</errorDisplayField>
    <errorMessage>End Date Must be After Start Date</errorMessage>
</ValidationRule>